# Estoca.AI

./: .coverage  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  teste.py
src/estoque_ai/: app.py  main.py  mongodb_database.py
src/estoque_ai/models/: db.py  models_database.py
src/estoque_ai/models/agents/: __init__.py  doc_router.py  empresa.apib  filter_checker.py  models.py  openapi.json  outros.apib  produtos.apib  recebimentos.apib  request_route.py  response_format.py  route_checker.py  validator.py  vendas.apib
src/estoque_ai/routers/: router_db_config.py
src/estoque_ai/routers/routers_chat/: chat.py
tests/: test_app.py
